--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,9 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <!-- Used to override the app name when added to Homescreen -->
+    <meta name="apple-mobile-web-app-title" content="<%= name %>" />
+
     <!-- inject:css -->
     <!-- endinject -->
 
