--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,13 @@
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
+    <!-- Android -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <!-- iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+
+    <meta name="apple-mobile-web-app-status-bar-style" content="translucent-black" />
+
     <!-- Used to override the app name when added to Homescreen -->
     <meta name="apple-mobile-web-app-title" content="<%= name %>" />
 
